Navbar and Breadcrumbs

--- a/aboutus.html
+++ b/aboutus.html
@@ -51,8 +51,7 @@
                         <li class="breadcrumb-item active">About</li>
                     </ol>
                     <h2>About Us</h2>
-               <h2>About Us</h2>
-               <hr />
+                </div>
             </div>
         </div>
 
