--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 
                 <div class="col=md-4-xl-2 mt-4">    
-                    <a class="btn btn-primary btn-lg bg-info" href="#reserveForm" role="button">Reserve Campsite</a>  
+                    <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>  
                 
                 </div>
             </div>
@@ -177,6 +177,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 </body>
 
 </html>
