--- a/index.html
+++ b/index.html
@@ -84,8 +84,6 @@
                             <div class="form-group row">
                                 <div class="col">
                                     <button type="submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                </div>
-                                <div class="col">
                                     <button type="submit" class="btn btn-primary">Search</button>
                                 </div>
                             </div>
@@ -251,7 +249,7 @@
         </div>
 
 
-
+    </div>
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -283,22 +281,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(function() {
-            $(".carousel").carousel( { interval: 2000 } );
-            $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
-                    $(".carousel").carousel("pause");
-                    $("#carouselButton").children("i").removeClass("fa-pause");
-                    $("#carouselButton").children("i").addClass("fa-play");
-                } else {
-                    $(".carousel").carousel("cycle");
-                    $("#carouselButton").children("i").removeClass("fa-play");
-                    $("#carouselButton").children("i").addClass("fa-pause"); 
-                }
-            });
-        });
-    </script>
+    <script src="js/scripts.js"></script>
 
 
 
